// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component Test Snapshot testing 1`] = `
<div
  className="HomeDetail"
/>
`;

exports[`Home component Test Snapshot testing 2`] = `
<div
  className="Menubar"
/>
`;
